--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -7,14 +7,10 @@
     android:gravity="center"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.chumbokit.doctor.doctorappointment.HomeActivity"
+    tools:context="com.chumbokit.doctor.project_final_years.HomeActivity"
     tools:showIn="@layout/app_bar_home">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+
 
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile"
@@ -53,115 +49,37 @@
 
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/myAppointmnet"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/client"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        card_view:cardCornerRadius="4dp">
+
+        <RelativeLayout
             android:layout_width="140dp"
             android:layout_height="140dp"
-            card_view:cardCornerRadius="4dp">
+            android:gravity="center">
 
-            <RelativeLayout
-                android:layout_width="140dp"
-                android:layout_height="140dp"
-                android:gravity="center">
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="3dp"
+                android:background="@drawable/employee" />
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="3dp"
-                    android:background="@drawable/appointmentlist" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView2"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="serif-monospace"
+                android:text="@string/Employee"
+                android:textColor="@color/colorBlack"
+                android:textSize="12dp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:fontFamily="serif-monospace"
-                    android:text="@string/my_appointment"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-
-
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/createAppointmnet"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_margin="20dp"
-            card_view:cardCornerRadius="4dp">
-
-            <RelativeLayout
-                android:layout_width="140dp"
-                android:layout_height="140dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_gravity="center"
-                    android:layout_margin="3dp"
-                    android:background="@drawable/appointmentcreate" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/imageView4"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignStart="@+id/imageView4"
-                    android:fontFamily="serif-monospace"
-                    android:text="@string/create_appointment"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="11dp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/myPrescription"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            card_view:cardCornerRadius="4dp">
-
-            <RelativeLayout
-                android:layout_width="140dp"
-                android:layout_height="140dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="3dp"
-                    android:background="@drawable/prescription" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/imageView2"
-                    android:layout_alignRight="@+id/imageView2"
-                    android:layout_below="@+id/imageView2"
-                    android:fontFamily="serif-monospace"
-                    android:text="@string/my_prescription"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="12dp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
 
 </LinearLayout>
