--- a/app/src/main/res/layout/custom_employee_list.xml
+++ b/app/src/main/res/layout/custom_employee_list.xml
@@ -47,6 +47,7 @@
             android:layout_gravity="end">
 
             <Button
+                android:id="@+id/map"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="1dp"
@@ -57,6 +58,7 @@
                 android:text="Map" />
 
             <Button
+                android:id="@+id/callHistory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
