--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_alignLeft="@+id/tvDesc"
         android:layout_below="@+id/tvDesc"
         android:elevation="5dp"
-        android:text="Login"
+        android:text="Manager Login"
         android:textColor="@color/colorWhite"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -187,6 +187,7 @@
                 android:textSize="14sp" />
 
             <Button
+                android:id="@+id/loginEmployee"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/cv"
@@ -196,10 +197,9 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/bt_uifb"
-                android:drawableLeft="@drawable/logofacebook"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:text="LOGIN WITH FACEBOOK"
+                android:text="Employee Login"
                 android:textColor="@color/colorPurple" />
         </RelativeLayout>
     </ScrollView>
