--- a/app/src/main/res/layout/content_employee_home.xml
+++ b/app/src/main/res/layout/content_employee_home.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.chumbokit.doctor.project_final_years.HomeActivity"
+    tools:context="com.chumbokit.doctor.project_final_years.EmployeeHome"
     tools:showIn="@layout/app_bar_home">
 
 
@@ -46,5 +46,28 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="monospace"
+            android:text="Call List"
+            android:textColor="@color/colorBlack" />
+    </android.support.v7.widget.CardView>
+
+    <ListView
+        android:id="@+id/LogsList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:dividerHeight="2dp"
+        tools:listitem="@layout/log_layout" />
 
 </LinearLayout>
