--- a/app/src/main/res/layout/call_lists.xml
+++ b/app/src/main/res/layout/call_lists.xml
@@ -9,8 +9,9 @@
         android:id="@+id/phoneNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentStart="false"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/callImage"
         android:layout_toRightOf="@+id/callImage"
         android:singleLine="true"
         android:text="Phone number"
