--- a/app/src/main/res/layout/custom_employee_list.xml
+++ b/app/src/main/res/layout/custom_employee_list.xml
@@ -23,7 +23,7 @@
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
@@ -31,14 +31,16 @@
                 android:text="Medium Text"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/colorPurple"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/subtitle"
-                android:layout_width="wrap_content"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="10sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -48,7 +50,7 @@
 
             <Button
                 android:id="@+id/map"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="1dp"
                 android:layout_marginTop="2dp"
