--- a/app/src/main/res/layout/call_lists.xml
+++ b/app/src/main/res/layout/call_lists.xml
@@ -48,4 +48,17 @@
         android:text="Date"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/callType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/callImage"
+        android:layout_marginEnd="52dp"
+        android:layout_marginRight="52dp"
+        android:fontFamily="monospace"
+        android:text="misscall"
+        android:textColor="#ae1414" />
 </RelativeLayout>
