--- a/app/src/main/res/menu/activity_employee_home_drawer.xml
+++ b/app/src/main/res/menu/activity_employee_home_drawer.xml
@@ -13,9 +13,9 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Gallery" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_task"
+            android:icon="@drawable/task"
+            android:title="My Task" />
         <item
             android:id="@+id/signout"
             android:icon="@drawable/ic_menu_manage"
