--- a/app/src/main/res/layout/custom_task_list.xml
+++ b/app/src/main/res/layout/custom_task_list.xml
@@ -9,19 +9,46 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/task1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/finsih"
+                android:layout_alignBottom="@+id/finsih"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:padding="10dp"
                 android:text="Task 1" />
-        </LinearLayout>
+
+            <Button
+                android:id="@+id/start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/finsih"
+                android:layout_toStartOf="@+id/finsih"
+                android:background="#908dd484"
+                android:text="Start"
+                android:layout_marginRight="2dp"
+                android:textAllCaps="false" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:background="#90d48f84"
+                android:textAllCaps="false"
+                android:drawableRight="@drawable/start_icon"
+                android:text="Finish"
+                android:id="@+id/finsih" />
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
