--- a/app/src/main/res/layout/profilecustomdialog.xml
+++ b/app/src/main/res/layout/profilecustomdialog.xml
@@ -92,12 +92,24 @@
 
         <Button
             android:id="@+id/task"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#ecc193"
             android:fontFamily="sans-serif-condensed"
             android:text="Assign Task"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/performance"
             style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="#ecc193"
+            android:fontFamily="sans-serif-condensed"
+            android:text="Performance View"
             android:textColor="@color/white"
             android:textSize="20dp" />
     </LinearLayout>
