--- a/app/src/main/res/layout/profilecustomdialog.xml
+++ b/app/src/main/res/layout/profilecustomdialog.xml
@@ -80,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="monospace"
-            android:text="Chittagong."
+            android:text="76ghfw034hgftyrtr."
             android:textSize="15dp" />
     </LinearLayout>
 
