--- a/app/src/main/res/layout/activity_employees.xml
+++ b/app/src/main/res/layout/activity_employees.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chumbokit.doctor.project_final_years.employees">
+    tools:context="com.itvillageltd.emphoyee.tracker.EmployeeListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
