--- a/app/src/main/res/layout/app_bar_employee_home.xml
+++ b/app/src/main/res/layout/app_bar_employee_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chumbokit.doctor.project_final_years.EmployeeHome">
+    tools:context="com.itvillageltd.emphoyee.tracker.EmployeeHomeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
