--- a/app/src/main/res/layout/activity_assign_task.xml
+++ b/app/src/main/res/layout/activity_assign_task.xml
@@ -4,32 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context="com.itvillageltd.emphoyee.tracker.AssignTaskActivity">
 
-    <EditText
-        android:id="@+id/title"
+    <Spinner
+        android:id="@+id/employeeList"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginBottom="10dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="112dp"
-        android:background="#fff"
-        android:ems="10"
+        android:layout_marginTop="10dp"
         android:fontFamily="monospace"
-        android:hint="Task Title"
-        android:inputType="textPersonName"
+        android:hint="Task Description"
+        android:inputType="textMultiLine"
+        android:padding="5dp" />
 
-        android:padding="10dp"
-        android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/description"
+    <Spinner
+        android:id="@+id/taskList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -50,6 +43,7 @@
         android:layout_marginTop="15dp"
         android:background="@color/mixbarcolor"
         android:fontFamily="monospace"
+        android:padding="5dp"
         android:text="Send"
         android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
