--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="40dp"
         android:elevation="5dp"
-        android:text="Welcome to Employee Tacker"
+        android:text="@string/app_name_welcome"
         android:textColor="@color/colorWhite"
         android:textSize="17sp" />
 
