--- a/app/src/main/res/layout/activity_attendance_sheet.xml
+++ b/app/src/main/res/layout/activity_attendance_sheet.xml
@@ -36,6 +36,15 @@
                 android:text="Check Out"
                 android:textColor="#000000" />
 
+            <TextView
+                android:id="@+id/workingHour"
+                android:layout_weight="1"
+                android:background="#d3d3d3"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="Working Hour"
+                android:textColor="#000000" />
+
         </TableRow>
 
         <!-- Row 3 with 3 columns -->
@@ -65,6 +74,14 @@
                 android:text=""
                 android:textColor="#000000" />
 
+            <ListView
+                android:id="@+id/workingHourList"
+                android:layout_weight="1"
+                android:background="#d3d3d3"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text=""
+                android:textColor="#000000" />
         </TableRow>
 
 
