--- a/app/src/main/res/layout/activity_attendance_sheet.xml
+++ b/app/src/main/res/layout/activity_attendance_sheet.xml
@@ -3,87 +3,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.itvillageltd.emphoyee.tracker.AttendanceSheetActivity">
 
-    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#ffffff"
-        android:shrinkColumns="*"
-        android:stretchColumns="*">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="1dp">
+            android:layout_weight="1"
+            android:background="#dcdcdc"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Check In"
+            android:textColor="#000000" />
 
-            <TextView
-                android:id="@+id/checkin"
-                android:layout_weight="1"
-                android:background="#dcdcdc"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="Check In"
-                android:textColor="#000000" />
-
-            <TextView
-                android:id="@+id/checkout"
-                android:layout_weight="1"
-                android:background="#d3d3d3"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="Check Out"
-                android:textColor="#000000" />
-
-            <TextView
-                android:id="@+id/workingHour"
-                android:layout_weight="1"
-                android:background="#d3d3d3"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="Working Hour"
-                android:textColor="#000000" />
-
-        </TableRow>
-
-        <!-- Row 3 with 3 columns -->
-
-
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="1dp">
+            android:layout_weight="1"
+            android:background="#dcdcdc"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Check Out"
+            android:textColor="#000000" />
 
-            <ListView
-                android:id="@+id/checkinTime"
-                android:layout_weight="1"
-                android:background="#dcdcdc"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text=""
-                android:textColor="#000000" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#dcdcdc"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Working Hour"
+            android:textColor="#000000" />
+    </LinearLayout>
 
-            <ListView
-                android:id="@+id/checkOutTime"
-                android:layout_weight="1"
-                android:background="#d3d3d3"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text=""
-                android:textColor="#000000" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-            <ListView
-                android:id="@+id/workingHourList"
-                android:layout_weight="1"
-                android:background="#d3d3d3"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text=""
-                android:textColor="#000000" />
-        </TableRow>
+        <ListView
+            android:id="@+id/checkinTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#dcdcdc"
+            android:gravity="center"
+            android:padding="10dp"
+            android:textColor="#000000" />
 
+        <ListView
+            android:id="@+id/checkOutTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#dcdcdc"
+            android:gravity="center"
+            android:padding="10dp"
+            android:textColor="#000000" />
 
-    </TableLayout>
+        <ListView
+            android:id="@+id/workingHourList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#dcdcdc"
+            android:gravity="center"
+            android:padding="10dp"
+            android:textColor="#000000" />
+    </LinearLayout>
 </LinearLayout>
