--- a/app/src/main/res/layout/custom_task_list.xml
+++ b/app/src/main/res/layout/custom_task_list.xml
@@ -22,6 +22,14 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:text="Task 1" />
+
+            <TextView
+                android:id="@+id/timePick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="timePick"
+                android:textSize="14dp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
